--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,37 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
 *{
     background-color: black;
 
 }
 html,body{
-
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    color: white;
     overflow: hidden;
     margin: 0;
     background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    text-align: center;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
 }
+#mainBody{
+    /*doslova tohle změn krpyle*/
+    display: flex;
+    flex-direction: column;
 
+}
 #canvas{
     object-fit: contain;
     max-width: 100%;
     max-height: 100%;
-    border: 1px solid white;
     padding: 0;
 }
 
+#mainScreenText{
+    font-size: 10em;
+}
 #gameOver{
     opacity: 0;
-    font-size: 20em;
-    color: white;
+    font-size: 10em;
 }
-#score{
-    color: white;
+
+#score, #tempScore{
     font-size: 3em;
-    text-align: center;
+}
+
+#mainButtonRow{
+    display: flex;
+}
+#mainButtonRow:first-child{
+    gap: 5%;
+}
+
+#gameButton, #skinMainButton{
+    margin: auto;
+    margin-top: 2em;
+    width: 40%;
+    height: 10%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+#mainScreenButton{
+    width: 0;
+    height: 0;
+    padding: 0;
+    margin: 0;
+}
+
+/*Shop*/
+#skinShop{
+    display: none;
+}
+
+#skinSeclection{
+    display: flex;
+    padding: 3em;
+    margin: 0;
+    border: 4px white solid;
+}
+#mainScreenButtonShop{
+    padding: 0.5em 1em 0.5em 1em;
+}
+
+#gameButton, #skinMainButton, #mainScreenButton, #mainScreenButtonShop, #skin1button, #skin2button{
+    background-color: white;
+    font-size: 2em;
+    align-items: center;
+    border: 0;
+}
+#gameButton:hover, #skinMainButton:hover, #mainScreenButton:hover, #mainScreenButtonShop:hover, #skin1button:hover, #skin2button:hover{
+    background-color: rgb(221, 220, 220);
+    cursor: pointer;
 }
